<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/content"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #1 Toggle Button"
            android:textSize="20dp" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ToggleButton" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/toggle_turn_off"
            android:textOn="@string/toggle_turn_on" />

        <Button
            android:id="@+id/btnDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #2 Edit Text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </EditText>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #3, #14, #15 Arrays,ListView, ArrayAdaper"
            android:textSize="20dp"/>

        <ListView
            android:id="@+id/list_view"
            android:layout_width="wrap_content"
            android:layout_height="221dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #4 Autocomplete"
            android:textSize="20dp"/>

        <AutoCompleteTextView
            android:id="@+id/autoComplete_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #5 Spinners"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/country_arrays"
            android:prompt="@string/country_prompt" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #6 Radio Button"
            android:textSize="20dp"/>

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radio_male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_female" />

        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #8 Popup menu"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_popup" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #9 Popup menu 2"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/popup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostrar_popup2" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #10 Long Press Button"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/buttonLongPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/me_pressione" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #11 Imagem de Fundo"
            android:textSize="20dp"/>
        <TextView
            android:id="@+id/imgGalaxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/galaxy" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #12, #13 Navegação entre activities, muitl Tab"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/goToActivity2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ir_para_segunda_activity" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #16 Grid View"
            android:textSize="20dp"/>
        <Button
            android:id="@+id/toGo3Activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/para_terceira_activity" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item #17 Tocar um Som"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/buttonMusicStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tocar Forest Meadow!" />
        <Button
            android:id="@+id/buttonMusicPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Parar Forest Meadow!"/>

    </LinearLayout>
</ScrollView>